# ckscribe

./: .gitignore  Cargo.toml  README.md  deploy.sh  dfx.json  docker-compose.yml  gen_candid.sh  init.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docker/: Dockerfile  bitcoin.conf
src/ckscribe_backend/ic_siwb/: Cargo.toml
src/ckscribe_backend/ic_siwb_provider/: Cargo.toml
src/ckscribe_backend/inscribe/: Cargo.toml  inscribe.did
src/ckscribe_backend/inscribe/src/: btc_api.rs  ecdsa_api.rs  lib.rs  schnorr_api.rs  utils.rs
src/ckscribe_backend/inscribe/src/wallet/: common.rs  etch.rs  mint.rs  mod.rs  wallet_types.rs
src/ckscribe_frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js
src/ckscribe_frontend/src/: main.tsx
src/ckscribe_frontend/src/api/: runes.ts
src/ckscribe_frontend/src/components/: ConnectDialog.tsx  ConnectWallet.tsx  ConnectedButton.tsx  WalletListModal.tsx
src/ckscribe_frontend/src/hooks/: Context.tsx  constants.ts
src/ckscribe_frontend/src/pages/app/components/: AppNavbar.tsx  Layout.tsx
src/ckscribe_frontend/src/pages/app/runes/: Runes.tsx
src/ckscribe_frontend/src/pages/app/runes/components/: Etcher.tsx
src/ckscribe_frontend/src/pages/app/runes/components/browse/: Browse.tsx  RuneCard.tsx  RuneModal.tsx
src/ckscribe_frontend/src/pages/app/runes/components/etch/: Etcher.tsx  PayWithBtc.tsx  PayWithCkBTC.tsx  ShowBalance.tsx
src/ckscribe_frontend/src/pages/app/runes/components/myrunes/: MyRunes.tsx
src/ckscribe_frontend/src/pages/home/: Hero.tsx  Home.tsx  Navbar.tsx
src/declarations/ckbtc_index/: index.d.ts  index.js
src/declarations/ckbtc_kyt/: ckbtc_kyt.did.d.ts  ckbtc_kyt.did.js  index.d.ts  index.js
src/declarations/ckbtc_ledger/: ckbtc_ledger.did.d.ts  ckbtc_ledger.did.js
src/declarations/ckbtc_minter/: ckbtc_minter.did.d.ts  ckbtc_minter.did.js  index.js
src/declarations/etcher_backend/: etcher_backend.did  etcher_backend.did.d.ts  etcher_backend.did.js  index.js
src/declarations/runeverse_frontend/: index.d.ts  index.js
src/declarations/schnorr_canister/: index.d.ts  index.js  schnorr_canister.did.d.ts  schnorr_canister.did.js
src/runeverse_backend/etcher_backend/: Cargo.toml  etcher_backend.did
src/runeverse_backend/etcher_backend/src/: btc_api.rs  lib.rs  schnorr_api.rs  test_fns.rs  types.rs  utils.rs
src/runeverse_frontend/: package.json
src/runeverse_frontend/src/: App.tsx  main.tsx
src/runeverse_frontend/src/components/: Etcher.tsx  PayWithBtc.tsx  PayWithCkBTC.tsx  ShowBalance.tsx
src/runeverse_frontend/src/hooks/: Context.tsx  constants.ts
src/runeverse_frontend/src/pages/app/brc20/: BRC20.tsx
src/runeverse_frontend/src/pages/app/ordinals/: Ord.tsx
src/runeverse_frontend/src/pages/app/runes/: Runes.tsx
src/runeverse_frontend/src/pages/app/runes/components/: Button.tsx  Copy.tsx  Etcher.tsx  PayWithBtc.tsx  PayWithCkBTC.tsx  ShowBalance.tsx
src/runeverse_frontend/src/pages/home/: Home.tsx
