[workspace]
members = [
    "src/ckscribe_backend/inscribe",
    "src/ckscribe_backend/ic_siwb_provider",
    "src/ckscribe_backend/ic_siwb"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.108"
serde_bytes = "0.11"
serde_cbor = "0.11"
candid = "0.10.7"
hex = "0.4.3"
ic-cdk = "0.13.2"
ic-cdk-timers = "0.7.0"
icrc-ledger-types = "0.1.5"
ic-certified-map = "0.4.0"
url = "2.4.1"
ic-agent = "0.36.0" 
pocket-ic = "6.0.0"
time = { version = "0.3.30", features = ["formatting"] }
rand_chacha = "0.3.1"
getrandom = { version = "0.2.14", features = ["custom"] }
k256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "sha256", "pem"] }
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
sha2 = "0.10.2"
simple_asn1 = "0.6.2"
bitcoin = { version = "0.30.2", features = ["serde", "base64"] }
byteorder = "1.5.0"
base64 = "0.22.1"
tokio = { version = "1.13.0", features = ["full"] }
rand = "0.8.4"
hex-literal = "0.2.1"
ciborium = "0.2.2"
slotmap = { version = "1.0.7", features = ["serde"] }
ring = "0.16.20"
