[package]
name = "ic_siwb_provider"
version = "0.0.1"
edition = "2021"
authors = ["ghostcorn <ghostcorn@astrox.network>"]
description = "Using the pre built ic_siwb_provider canister is the easiest way to integrate Bitcoin wallet authentication into an Internet Computer (ICP) application."
license = "MIT"
homepage = "https://github.com/AstroxNetwork/ic-siwb"
repository = "https://github.com/AstroxNetwork/ic-siwb"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic_siwb = { path = "../ic_siwb" }
ic-stable-structures = "0.6.4"
ic-certified-map = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }

[dev-dependencies]
ethers = "2.0.10"
hex = { workspace = true }
ic-agent = { workspace = true }
pocket-ic = { workspace = true }
siwe = "0.6"
rand = { workspace = true }
ring = { workspace = true }

