[package]
name = "inscribe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ordinals = "0.0.8"
serde = { workspace = true }
bitcoin = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bs58 = "0.5.0"
ripemd = "0.1.1"
icrc-ledger-types = { workspace = true }
tiny-keccak = { workspace = true }
getrandom = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = "0.6.4"
ciborium = { workspace = true }
slotmap = { workspace = true }
